grammar.js
    source_file: ($) => repeat(choice($.statement, $.comment)),

    // Literals

    _literal: ($) =>
      choice(
        $.decimal_integer_literal,
        $.hex_integer_literal,
        $.octal_integer_literal,
        $.binary_integer_literal,
        $.decimal_floating_point_literal,
        $.hex_floating_point_literal,
        $.true,
        $.false,
        $.string_literal,
        $.text_block,
        $.null_literal,
      ),

    map_key: ($) => prec.left(choice(seq("(", $.identifier, ")"), $._literal)),

    map_entry: ($) =>
      seq(field("key", $.map_key), ":", field("value", $.expression)),

    map_literal: ($) => seq("[", choice(commaSep($.map_entry), ":"), "]"),

    array_literal: ($) => seq("[", commaSep($.expression), "]"),

    decimal_integer_literal: () =>
      token(seq(DIGITS, optional(choice("l", "L")))),

    true: () => "true",

    string_literal: ($) =>
      choice(
        $._sq_string_literal,
        $._dq_string_literal,
        $._triple_sq_string_literal,
        $._triple_dq_string_literal,
      ),

    _sq_string_literal: () =>
      token(seq("'", repeat(choice(/[^\\'\n]/, /\\./, /\\\n/)), "'")),

    _dq_string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $._string_fragment,
            $._escape_sequence,
            $.string_interpolation,
          ),
        ),
        '"',
      ),

    _triple_sq_string_literal: () =>
      token(seq("'''", /([^'\\]|\\.|'[^']|''[^'])*/, "'''")),

    _triple_dq_string_literal: ($) =>
      seq(
        '"""',
        repeat(
          choice(
            alias($._multiline_string_fragment, $.multiline_string_fragment),
            $._escape_sequence,
            $.string_interpolation,
          ),
        ),
        '"""',
      ),

    null_literal: ($) => "null",

    // Expressions

    cast_expression: ($) =>
      prec.right(
        PREC.CAST,
        choice(
          seq(
            "(",
            choice(field("type", $._type), seq($._type, $.dimensions)),
            ")",
            field("value", $.expression),
          ),
          seq(
            field("value", $.expression),
            "as",
            choice(field("type", $._type), seq($._type, $.dimensions)),
          ),
        ),
      ),

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", choice($.identifier, $.field_access, $.array_access)),
          field(
            "operator",
            choice(
              "=",
              "+=",
              "-=",
              "*=",
              "/=",
              "&=",
              "|=",
              "^=",
              "%=",
              "<<=",
              ">>=",
              ">>>=",
            ),
          ),
          field("right", $.expression),
        ),
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["<", PREC.GENERIC + 1],
          [">", PREC.REL],
          [">=", PREC.REL],
          ["<=", PREC.REL],
          ["in", PREC.REL],
          ["==", PREC.EQUALITY],
          ["!=", PREC.EQUALITY],
          ["&&", PREC.AND],
          ["||", PREC.OR],
          ["+", PREC.ADD],
          ["-", PREC.ADD],
          ["*", PREC.MULT],
          ["/", PREC.MULT],
          ["&", PREC.BIT_AND],
          ["|", PREC.BIT_OR],
          ["^", PREC.BIT_XOR],
          ["%", PREC.MULT],
          ["<<", PREC.SHIFT],
          [">>", PREC.SHIFT],
          [">>>", PREC.SHIFT],
          ["<=>", PREC.REL],
          ["?:", PREC.TERNARY],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
      ),

    parenthesized_expression: ($) =>
      prec(PREC.PARENS, seq("(", $.expression, ")")),

    object_creation_expression: ($) =>
      choice(
        $._unqualified_object_creation_expression,
        seq(
          $.primary_expression,
          ".",
          $._unqualified_object_creation_expression,
        ),
      ),

    _unqualified_object_creation_expression: ($) =>
      prec.right(
        seq(
          "new",
          field("type_arguments", optional($.type_arguments)),
          field("type", $._simple_type),
          $.object_creation_argument_list,
          optional($.class_body),
        ),
      ),

    object_creation_argument_list: ($) => seq("(", commaSep($.argument), ")"),

    argument: ($) =>
      choice(
        seq(field("name", choice($.identifier, $.string_literal)), ":", field("value", $.expression)),
        $.expression,
      ),

    field_access: ($) =>
      prec.dynamic(
        PREC.OBJ_ACCESS,
        seq(
          field("object", choice($.primary_expression, $.super)),
          optional(seq(".", $.super)),
          field("operator", choice(".", "?.", "*.")),
          field("field", choice($.identifier, $.this)),
        ),
      ),

    array_access: ($) =>
      seq(
        field("array", $.primary_expression),
        "[",
        field("index", $.expression),
        "]",
      ),

    method_invocation: ($) =>
      choice(
        $._simple_method_invocation,
        $._object_method_invocation,
        $._closure_method_invocation,
      ),

    _simple_method_invocation: ($) =>
      prec(
        PREC.CALL,
        seq(field("name", $.identifier), field("arguments", $.argument_list)),
      ),

    _object_method_invocation: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("object", choice($.primary_expression, $.super)),
          field("operator", choice(".", "?.", "*.")),
          optional(seq($.super, ".")),
          field("type_arguments", optional($.type_arguments)),
          field("name", $.identifier),
          choice(
            seq(
              field("arguments", $.argument_list),
              field("closure", optional($.closure)),
            ),
            field("arguments", $.argument_list),
            field("closure", $.closure),
          ),
        ),
      ),

    _closure_method_invocation: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("object", choice($.primary_expression, $.super)),
          field("operator", choice(".", "?.", "*.")),
          field("name", $.identifier),
          optional("("),
          field("closure", $.closure),
          optional(")"),
        ),
      ),

    argument_list: ($) => seq("(", commaSep($.expression), ")"),

    type_arguments: ($) =>
      prec.right(
        PREC.GENERIC,
        seq(token.immediate("<"), commaSep(choice($._type, $.wildcard)), ">"),
      ),

    dimensions: ($) =>
      prec.right(repeat1(seq(repeat($._annotation), "[", "]"))),

    switch_expression: ($) =>
      seq(
        "switch",
        field("condition", $.parenthesized_expression),
        field("body", $.switch_block),
      ),

    switch_block: ($) =>
      seq(
        "{",
        choice(repeat($.switch_block_statement_group), repeat($.switch_rule)),
        "}",
      ),

    switch_rule: ($) =>
      seq(
        $.switch_label,
        "->",
        choice($.expression_statement, $.throw_statement, $.block),
      ),

    switch_label: ($) =>
      choice(seq("case", commaSep1($.expression)), "default"),

    // Statements

    block: ($) => seq("{", repeat($.statement), "}"),

    closure: ($) =>
      seq(
        "{",
        optional(seq(commaSep1($.identifier), "->")),
        repeat($.statement),
        "}",
      ),

    expression_statement: ($) => prec.right(seq($.expression, optional(";"))),

    assert_statement: ($) =>
      choice(
        seq("assert", $.expression, ";"),
        seq("assert", $.expression, ":", $.expression, ";"),
      ),

    break_statement: ($) =>
      prec.right(seq("break", optional($.identifier), optional(";"))),

    continue_statement: ($) =>
      prec.right(seq("continue", optional($.identifier), optional(";"))),

    return_statement: ($) =>
      prec.right(seq("return", optional($.expression), optional(";"))),

    yield_statement: ($) =>
      prec.right(seq("yield", $.expression, optional(";"))),

    throw_statement: ($) =>
      prec.right(seq("throw", $.expression, optional(";"))),

    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $.parenthesized_expression),
          field("consequence", $.statement),
          optional(seq("else", field("alternative", $.statement))),
        ),
      ),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $.parenthesized_expression),
        field("body", $.statement),
      ),

    enhanced_for_statement: ($) =>
      seq(
        "for",
        "(",
        seq(
          optional($.modifiers),
          field("type", $._unannotated_type),
          $._variable_declarator_id,
          choice(":", "in"),
          field("value", $.expression),
        ),
        ")",
        field("body", $.statement),
      ),

    // Annotations

    _annotation: ($) => choice($.marker_annotation, $.annotation),

    marker_annotation: ($) => seq("@", field("name", $._name)),

    annotation: ($) =>
      seq(
        "@",
        field("name", $._name),
        field("arguments", $.annotation_argument_list),
      ),

    annotation_argument_list: ($) =>
      seq("(", choice($._element_value, commaSep($.element_value_pair)), ")"),

    _element_value: ($) =>
      prec(
        PREC.ELEMENT_VAL,
        choice($.expression, $.element_value_array_initializer, $._annotation),
      ),

    package_declaration: ($) =>
      prec.right(seq(repeat($._annotation), "package", $._name, optional(";"))),

    import_declaration: ($) =>
      prec.right(
        seq(
          "import",
          optional("static"),
          $._name,
          optional(seq(".", $.asterisk)),
          optional(";"),
        ),
      ),

    asterisk: ($) => "*",

    class_declaration: ($) =>
      prec.right(
        5,
        seq(
          optional($.modifiers),
          "class",
          field("name", $.identifier),
          optional(field("type_parameters", $.type_parameters)),
          optional(field("superclass", $.superclass)),
          optional(field("interfaces", $.super_interfaces)),
          optional(field("permits", $.permits)),
          field("body", $.class_body),
        ),
      ),

    modifiers: ($) =>
      prec(
        5,
        repeat1(
          choice(
            $._annotation,
            "public",
            "protected",
            "private",
            "abstract",
            "static",
            "final",
            "strictfp",
            "default",
            "synchronized",
            "native",
            "transient",
            "volatile",
            "sealed",
            "non-sealed",
          ),
        ),
      ),

    class_body: ($) => seq("{", repeat($._class_body_declaration), "}"),

    _class_body_declaration: ($) =>
      choice(
        $.field_declaration,
        $.record_declaration,
        $.method_declaration,
        $.compact_constructor_declaration, // For records.
        $.class_declaration,
        $.interface_declaration,
        $.annotation_type_declaration,
        $.enum_declaration,
        $.block,
        $.static_initializer,
        $.constructor_declaration,
        ";",
      ),

    _name: ($) => choice($.identifier, $.scoped_identifier),

    scoped_identifier: ($) =>
      seq(field("scope", $._name), ".", field("name", $.identifier)),

    field_declaration: ($) =>
      prec.right(
        seq(
          optional($.modifiers),
          field("type", $._unannotated_type),
          $._variable_declarator_list,
          optional(";"),
        ),
      ),

    interface_declaration: ($) =>
      seq(
        optional($.modifiers),
        "interface",
        field("name", $.identifier),
        field("type_parameters", optional($.type_parameters)),
        optional($.extends_interfaces),
        optional(field("permits", $.permits)),
        field("body", $.interface_body),
      ),

    interface_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            $.constant_declaration,
            $.enum_declaration,
            $.method_declaration,
            $.class_declaration,
            $.interface_declaration,
            $.record_declaration,
            $.annotation_type_declaration,
            ";",
          ),
        ),
        "}",
      ),

    constant_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_list,
        ";",
      ),

    _variable_declarator_list: ($) =>
      commaSep1(field("declarator", $.variable_declarator)),

    variable_declarator: ($) =>
      prec.right(
        seq(
          $._variable_declarator_id,
          optional(seq("=", field("value", $._variable_initializer))),
        ),
      ),

    _variable_declarator_id: ($) => seq(field("name", $.identifier)),

    _variable_initializer: ($) => choice($.expression, $.array_initializer),

    _type: ($) =>
      prec.left(PREC.TYPE, choice($._unannotated_type, $.annotated_type)),

    _unannotated_type: ($) =>
      prec.right(PREC.TYPE, choice($._simple_type, $.array_type)),

    scoped_type_identifier: ($) =>
      prec.left(
        PREC.SCOPED_TYPE,
        seq(
          choice(
            alias($.identifier, $.type_identifier),
            $.scoped_type_identifier,
          ),
          ".",
          repeat($._annotation),
          alias($.identifier, $.type_identifier),
        ),
      ),

    generic_type: ($) =>
      prec.right(
        PREC.GENERIC,
        seq(
          choice(
            alias($.identifier, $.type_identifier),
            $.scoped_type_identifier,
          ),
          $.type_arguments,
        ),
      ),

    integral_type: () => choice("byte", "short", "int", "long", "char"),

    void_type: () => "void",

    _method_header: ($) =>
      seq(
        optional(
          seq(
            field("type_parameters", $.type_parameters),
            repeat($._annotation),
          ),
        ),
        field("type", $._unannotated_type),
        $._method_declarator,
        optional($.throws),
      ),

    formal_parameters: ($) =>
      prec(
        PREC.LAMBDA,
        seq(
          "(",
          optional($.receiver_parameter),
          commaSep(choice($.formal_parameter, $.spread_parameter)),
          ")",
        ),
      ),

    variable_declaration: ($) =>
      prec.right(
        PREC.DECL,
        seq(
          optional("final"),
          // repeat($._annotation),
          choice("def", "var", field("type", $._unannotated_type)),
          $._variable_declarator_list,
          optional(";"),
        ),
      ),

    method_declaration: ($) =>
      prec.right(
        seq(
          optional($.modifiers),
          $._method_header,
          optional(field("body", $.block)),
          optional(";"),
        ),
      ),

    identifier: () => /[\p{L}_$][\p{L}\p{Nd}_$]*/,

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    groovydoc_comment: () =>
      token(prec(PREC.COMMENT + 1, seq("/**", /([^*]|\*[^/])*/, "*/"))),
  },
});

function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}

function commaSep(rule) {
  return optional(commaSep1(rule));
}
