test/corpus/collections.test
================================================================================
array literal with elements
================================================================================
[1, 2, 3]
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (array_literal
      (decimal_integer_literal)
      (decimal_integer_literal)
      (decimal_integer_literal))))

================================================================================
nested array literal
================================================================================
[[1, 2], [3, 4]]
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (array_literal
      (array_literal
        (decimal_integer_literal)
        (decimal_integer_literal))
      (array_literal
        (decimal_integer_literal)
        (decimal_integer_literal)))))

================================================================================
empty map literal
================================================================================
[:]
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (map_literal)))

================================================================================
map literal with string key
================================================================================
[key: "value"]
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (map_literal
      (map_entry
        (map_key
          (identifier))
        (string_literal)))))

================================================================================
array literal with trailing comma
================================================================================
[1, 2, 3,]
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (array_literal
      (decimal_integer_literal)
      (decimal_integer_literal)
      (decimal_integer_literal))))

================================================================================
map literal with parenthesized expression keys
================================================================================
Map<MyEnum.Type, String> map = [
    (MyEnum.Type.VALUE_ONE): "first",
    (MyEnum.Type.VALUE_TWO): "second"
]
--------------------------------------------------------------------------------
(source_file
  (variable_declaration
    type: (generic_type
      (type_identifier)
      (type_arguments
        (scoped_type_identifier
          (type_identifier)
          (type_identifier))
        (type_identifier)))
    declarator: (variable_declarator
      name: (identifier)
      value: (map_literal
        (map_entry
          key: (map_key
            (field_access
              object: (field_access
                object: (identifier)
                field: (identifier))
              field: (identifier)))
          value: (string_literal))
        (map_entry
          key: (map_key
            (field_access
              object: (field_access
                object: (identifier)
                field: (identifier))
              field: (identifier)))
          value: (string_literal))))))
