test/corpus/comment.test
================================================================================
comment between statements
================================================================================
import com.example.package.*
/**
* comment
*/
@CompileStatic
class MyClass{}
--------------------------------------------------------------------------------
(source_file
  (import_declaration
    (scoped_identifier
      (scoped_identifier
        (identifier)
        (identifier))
      (identifier))
    (asterisk))
  (groovydoc_comment)
  (class_declaration
    (modifiers
      (marker_annotation
        (identifier)))
    (identifier)
    (class_body)))
